--- a/ecca.html
+++ b/ecca.html
@@ -1,1 +1,160 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unity Youth Organization - Home</title>
+    <link rel="stylesheet" href="ecca.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+    <!-- Animated Background -->
+    <div class="animated-bg">
+        <div class="floating-shapes">
+            <div class="shape shape-1"></div>
+            <div class="shape shape-2"></div>
+            <div class="shape shape-3"></div>
+            <div class="shape shape-4"></div>
+            <div class="shape shape-5"></div>
+        </div>
+    </div>
+
+    <!-- Navigation -->
+    <nav class="navbar" id="navbar">
+        <div class="nav-container">
+            <div class="nav-logo">
+                <h2>Unity Youth</h2>
+            </div>
+            <div class="nav-box">
+                <ul class="nav-menu" id="nav-menu">
+                    <li class="nav-item">
+                        <a href="ecca.html" class="nav-link active">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="about.html" class="nav-link">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="program.html" class="nav-link">Programs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="event.html" class="nav-link">Events</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="contact.html" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="nav-toggle" id="mobile-menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-container">
+            <div class="hero-content">
+                <h1 class="hero-title"> EMBU COUNTY CONRADE ASSOCIATION   ECCA</h1> 
+                  <h2> Empowering Tertiary Students for Tomorrow
+                </h2>
+                <p class="hero-description">
+                    Join a community of passionate students dedicated to academic excellence, 
+                    social justice, and positive change in our universities and beyond.
+                </p>
+                <div class="hero-buttons">
+                    <a href="about.html" class="btn btn-primary">Learn More</a>
+                    <a href="contact.html" class="btn btn-secondary">Join Us</a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="images/logo.png" alt="Students working together" />
+            </div>
+        </div>
+    </section>
+
+    <!-- Quick Stats -->
+    <section class="stats">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-card">
+                    <div class="stat-number" data-target="500">0</div>
+                    <div class="stat-label">Active Members</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-number" data-target="50">0</div>
+                    <div class="stat-label">Universities</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-number" data-target="200">0</div>
+                    <div class="stat-label">Events Held</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-number" data-target="1000">0</div>
+                    <div class="stat-label">Lives Impacted</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Mission Statement -->
+    <section class="mission">
+        <div class="container">
+            <div class="mission-content">
+                <h2>Our Mission</h2>
+                <p>To create a unified platform where tertiary students can collaborate, learn, and drive meaningful change in their communities while building lasting networks that transcend institutional boundaries.</p>
+                <div class="mission-values">
+                    <div class="value">
+                        <h3>Unity</h3>
+                        <p>Bringing students together across all institutions</p>
+                    </div>
+                    <div class="value">
+                        <h3>Excellence</h3>
+                        <p>Striving for academic and personal growth</p>
+                    </div>
+                    <div class="value">
+                        <h3>Impact</h3>
+                        <p>Creating positive change in our communities</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Unity Youth</h3>
+                    <p>Empowering tertiary students to create positive change in their communities and beyond.</p>
+                </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="program.html">Programs</a></li>
+                        <li><a href="event.html">Events</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h4>Connect</h4>
+                    <div class="footer-social">
+                        <a href="#" class="social-link">Facebook</a>
+                        <a href="#" class="social-link">Twitter</a>
+                        <a href="#" class="social-link">Instagram</a>
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; EMBU COUNTY COMRADE ASSOCIATION. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="ecca.js"></script>
+</body>
+</html>
